fix the blog preview on mobile

--- a/blog/style.css
+++ b/blog/style.css
@@ -128,6 +128,11 @@ hr {
         margin-left: 0;
         margin-right: 0;
     }
+
+    .blog-preview {
+        padding: 5px;
+        border: none;
+    }
 }
 
 @media screen and (max-width: 600px) {
